# dui

./: .gitignore  Cargo.toml  README.md  is.div.di.json  meson.build
build-aux/: cargo-doc.sh  cargo-watch.sh
data/: is.div.di.appdata.xml.in  is.div.di.desktop.in  is.div.di.gschema.xml  li.per.pl.appdata.xml.in  li.per.pl.desktop.in  li.per.pl.gschema.xml  meson.build
po/: POTFILES  meson.build
res/ui/: about.ui  main.ui  main.ui~  main_window.glade~
src/: app.rs  app_config.rs  config.rs  di.gresource.xml  error.rs  lib.rs  main.rs  meson.build  models.rs  pl.gresource.xml  state.rs  ui.rs  window.rs  window.ui
src/models/: fact.rs  record.rs  types.rs  user.rs
src/ui/: about.rs  preferences.rs  search_popover.rs
tests/: lib.rs
