[package]
name = "pl"
version = "0.1.0"
edition = "2018"
default-run = "di"

[[bin]]
name = "di"
path = "src/bin/di.rs"


[lib]
name = "di"
path = "src/lib.rs"

[dependencies]
uuid = { version = "*", features = ["v4", "serde"]}
serde = { version = "*", features = ["derive"]}
chrono = { version = "*", features = ["serde"]}
config = { version = "*", features = ["toml"]}
dirs-next = "*"
gladis = "*"
globset = "*"
rand = "*"
gdk-pixbuf = "*"
pango = "*"
dbus = "*"
crossbeam-channel = "0.5.0"
futures = "0.3.8"
cairo-rs = { version = "*", features = ["png"]}
keyring = "*"
toml = "*"
gobject-sys = "0.10.0"
html2pango = "*"
sourceview4 = "*"
gtk-sys = "*"
libhandy = "*"
libappindicator = "*"
gspell = "*"
url = { version = "*", features = ["serde"]}
# gst = "*"
# gladis =
# gladis-proc-macro = "*"
# relm = "0.20.0"
# relm-derive = "0.20.0"
# shrinkwraps = "*"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_24"]

[dependencies.gdk]
version = "0.13.2"
features = ["v3_24"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_60"]

[dependencies.glib]
version = "0.10.3"
features = ["v2_60"]

[dependencies.gettext-rs]
version = "0.5.0"
features = ["gettext-system"]

[profile.release]
lto = "thin"
panic = "abort"
debug = true

[profile.dev]
panic = "abort"
debug = true
