[package]
name = "di"
version = "0.1.0"
edition = "2018"
default-run = "di"

[[bin]]
name = "di"
path = "src/bin/di.rs"


[lib]
name = "di"
path = "src/lib.rs"

[dependencies]
uuid = { version = "*", features = ["v4", "serde"]}
serde = { version = "^1.0", features = ["derive"]}
chrono = { version = "*", features = ["serde"]}
config = { version = "*", features = ["toml"]}
dirs-next = "*"
gladis = "*"
globset = "*"
rand = "*"
gdk-pixbuf = "*"
pango = "*"
dbus = "*"
crossbeam-channel = "0.5.0"
futures = "0.3.8"
cairo-rs = { version = "*", features = ["png"]}
keyring = "*"
toml = "*"
gobject-sys = "0.10.0"
html2pango = "*"
# sourceview4 = "*"
gtk-sys = "*"
libappindicator = "*"
libhandy = "0.7.1"
# gst = "0.1.3"
glib = "0.10.3"
gtk = "0.9.2"
gdk = "0.13.2"
gio = "0.9.1"
gettext-rs = "0.5.0"
# ordered-float = "2.0.1"
# gspell = "*"
# url = { version = "*", features = ["serde"]}
# gst = "*"
# gladis =
# gladis-proc-macro = "*"
# relm = "0.20.0"
# relm-derive = "0.20.0"
# shrinkwraps = "*"

[profile.release]
lto = "thin"
panic = "abort"
debug = true

[profile.dev]
panic = "abort"
debug = true
