[package]
name = "di"
version = "0.1.0"
edition = "2018"
default-run = "di"

[[bin]]
name = "di"
path = "src/bin/di.rs"


[lib]
name = "di"
path = "src/lib.rs"

[dependencies]
uuid = { version = "*", features = ["v4", "serde"]}
serde = { version = "^1.0", features = ["derive"]}
chrono = { version = "*", features = ["serde"]}
config = { version = "*", features = ["toml"]}
dirs-next = "*"
globset = "*"
rand = "*"
crossbeam-channel = "0.5.0"
futures = "0.3.8"
keyring = "*"
toml = "*"
glib = { version = "0.10" }
gdk-pixbuf = { version = "0.9", features = ["v2_36"] }
gtk = { version = "0.9", features = ["v3_24"] }
gio = { version = "0.9", features = ["v2_58"] }
gdk = { version = "0.13", features = ["v3_24"] }
gettext-rs = { version = "0.5", features = ["gettext-system"] }
pango = "0.9"
cairo-rs = { version = "0.9", features = ["v1_16"] }
notify = "*"
regex = "1.3"
lazy_static = "*"
# libhandy = { version = "0.7", features = ["v1_0"] }
# webkit2gtk = { version = "0.11", features = ["v2_16"] }
# libappindicator = "*"
# gladis = "*"
# gdk-pixbuf = "*"
# pango = "*"
# dbus = "*"
# sourceview4 = "*"
# gobject-sys = "0.10.0"
# html2pango = "*"
# cairo-rs = { version = "*", features = ["png"]}
# gst = "0.1.3"

# ordered-float = "2.0.1"
# gspell = "*"
# url = { version = "*", features = ["serde"]}
# gst = "*"
# gladis =
# gladis-proc-macro = "*"
# relm = "0.20.0"
# relm-derive = "0.20.0"
# shrinkwraps = "*"

[profile.release]
lto = "thin"
panic = "abort"
debug = true

[profile.dev]
panic = "abort"
debug = true
